Add copyright notices and Apache-2.0 licence

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,7 @@ name = "tasknotify"
 version = "0.1.0"
 description = "Headless notify"
 readme = "README.md"
+license-files = ["LICENSE"]
 requires-python = ">=3.10"
 dependencies = [
     "PyGObject",
