Specify build system and add metadata

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,16 @@
+[build-system]
+requires = ["flit_core >=3.11,<4"]
+build-backend = "flit_core.buildapi"
+
 [project]
 name = "tasknotify"
 version = "0.1.0"
 description = "Headless notify"
+authors = [
+    {name = "Dylan Maltby"},
+]
 readme = "README.md"
-license-files = ["LICENSE"]
+license = "Apache-2.0"
 requires-python = ">=3.10"
 dependencies = [
     "PyGObject",
@@ -20,6 +27,11 @@ dev = [
     "mypy",
     "pygobject-stubs",
     "types-psutil",
+]
+
+[tool.flit.sdist]
+include = [
+    "tests/",
 ]
 
 [tool.isort]
